--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -153,6 +153,13 @@ input:user-invalid ~ span {
 /* || table styles */
 /*  */
 
+th:first-child,
+td:first-child {
+  position: sticky;
+  left: 0px;
+  z-index: 7;
+}
+
 .table-action {
   white-space: nowrap;
   width: 1em !important;
@@ -370,7 +377,7 @@ tr:hover .btn-edit {
 
 #sidebar {
   background-color: transparent;
-  /* border-right: 1px solid var(--bs-dark); */
+  border-right: 1px solid var(--bs-dark);
   height: var(--content-height);
   overflow: auto;
   margin-right: 0;
