--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -5,14 +5,22 @@
       <button type="button"
               class="btn-close btn-close-white text-reset"
               data-bs-dismiss="offcanvas"
-              aria-label="Close">
-      </button>
+              aria-label="Close"></button>
     </div>
     <div class="offcanvas-body p-0">
       <div class="list-group list-group-flush">
         {% for field in fields %}
+          {% if field.fields[0].field_type.name == 'grassland' %}
+            {% set bg = "bg-grassland" %}
+          {% elif field.fields[0].field_type.name == 'cropland' %}
+            {% set bg = "bg-cropland" %}
+          {% elif "fallow" in field.fields[0].field_type.name %}
+            {% set bg = "bg-fallowland" %}
+          {% else %}
+            {% set bg = "bg-exchangeland" %}
+          {% endif %}
           <a href="{{ url_for('main.field', base_field_id=field.id) }}"
-             class="list-group-item list-group-item-action {% if field.fields[0].field_type.name == 'grassland' %} bg-grassland {% elif field.fields[0].field_type.name == 'cropland' %} bg-cropland {% else %} bg-custom {% endif %} text-white sidebar-item"
+             class="list-group-item list-group-item-action {{ bg }} text-white sidebar-item"
              id="{{ field.id }}">
             <div class="d-flex w-100 justify-content-between">
               <span class="fw-500 mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
