--- a/app/templates/fields.html
+++ b/app/templates/fields.html
@@ -10,40 +10,16 @@
             data-form="base_field"
             data-modal="new">✚ New</button>
     <p class="my-2">List of base fields</p>
-    {% for base_field in base_fields %}
-      <div class="accordion">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#field{{ base_field.id }}">
-              <strong>
-                {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
-              </strong>
-              <div class="btn-edit ms-2"
-                   data-bs-toggle="modal"
-                   data-bs-target="#modal"
-                   data-form="base_field"
-                   data-modal="edit"
-                   data-id="{{ base_field.id }}">{{ render_icon("pencil-square", extra_classes="color-green") }}</div>
-            </button>
-          </h2>
-          <div class="accordion-collapse collapse" id="field{{ base_field.id }}">
-            <div class="accordion-body pt-0">
-              {% include "_fields_field.html" %}
-              <button class="btn btn-sm btn-success fw-500 d-print-none"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#modal"
-                      data-form="field"
-                      data-modal="new"
-                      data-id="{{ base_field.id }}">Add cultivation year</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    {% endfor %}
+    {% include "_fields_base_fields.html" %}
+    <div class="center">
+      <img class="htmx-indicator"
+           height="64px"
+           width="64px"
+           aspect="fixed"
+           alt="Spinner for loading."
+           id="page-indicator"
+           src="{{ url_for('static', filename='img/spinner_bars.svg') }}" />
+    </div>
   </div>
 
 {% endblock app_content %}
