--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -26,7 +26,7 @@
   <div class="navbar-collapse collapse" id="navbarNav">
     <ul class="navbar-nav">
       {% if not current_user.is_anonymous %}
-        {{ render_nav_item("main.fields", "Field", _use_li=True) }}
+        {{ render_nav_item("main.fields", "Fields", _use_li=True) }}
         {{ render_nav_item("main.crop", "Crop", _use_li=True) }}
         {{ render_nav_item("main.fertilizer", "Fertilizer", _use_li=True) }}
       {% endif %}
