refactor: rename sub_suffix to partition

--- a/app/templates/_fields_base_fields.html
+++ b/app/templates/_fields_base_fields.html
@@ -26,7 +26,7 @@
               <thead>
                 <tr>
                   <th scope="col">Year</th>
-                  <th scope="col">Sub-suffix</th>
+                  <th scope="col">Partition</th>
                   <th scope="col">Area</th>
                   <th scope="col">Type</th>
                   <th scope="col" colspan="2">Red region</th>
