--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
 {% endblock navbar %}
 
 {% block sidebar %}
-  {% if fields %}
+  {% if sidebar %}
     {% include "sidebar.html" %}
   {% endif %}
 {% endblock sidebar %}
