--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -6,29 +6,27 @@
 {# {% from "field/_field_fertilization.html" import render_total with context %} #}
 
 {% block app_content %}
+  {% set db = namespace(field = none) %}
+  {% set db.field = db_field %}
   {% if not field %}
     <div>
       <h1>
-        {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
+        {{ "{prefix:02}-{suffix} {name}".format(prefix=db.field.base_field.prefix, suffix=db.field.base_field.suffix, name=db.field.base_field.name) }}
       </h1>
       <h6>
         No field data for {{ current_user.year }}.
-        <a href="{{ url_for('main.fields', _anchor='field{}'.format(base_field.id) ) }}">Create it here.</a>
+        <a href="{{ url_for('main.fields', _anchor='field{}'.format(db.field.id) ) }}">Create it here.</a>
       </h6>
     </div>
   {% else %}
     <!--field header-->
-    {% set db = namespace(field = none) %}
-    {% for field in base_field.fields if field.year == current_user.year %}
-      {% set db.field = field %}
-    {% endfor %}
     <div class="row"
          id="field"
-         data-base-id="{{ base_field.id }}"
+         data-base-id="{{ db.field.base_field.id }}"
          data-field-id="{{ db.field.id }}">
       <div class="col">
         <h1>
-          {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
+          {{ "{prefix:02}-{suffix} {name}".format(prefix=db.field.base_field.prefix, suffix=db.field.base_field.suffix, name=db.field.base_field.name) }}
         </h1>
         <h6>{{ db.field.field_type.value }} — {{ db.field.area | format_number('.2f', 'ha') }}</h6>
       </div>
@@ -39,7 +37,7 @@
                 data-bs-target="#modal"
                 data-form="field"
                 data-modal="new"
-                data-id="{{ base_field.id }}">{{ render_icon("plus-square", extra_classes="color-green") }}</button>
+                data-id="{{ db.field.base_field.id }}">{{ render_icon("plus-square", extra_classes="color-green") }}</button>
         <button class="btn btn-link d-print-none"
                 type="button"
                 data-bs-toggle="modal"
@@ -223,7 +221,7 @@
               data-bs-target="#modal"
               data-form="soil"
               data-modal="new"
-              data-id="{{ base_field.id }}">Add soil sample</button>
+              data-id="{{ db.field.base_field.id }}">Add soil sample</button>
     </div>
     <!--modifier data-->
     <div class="tab-pane fade"
