feat: implement basic list generator

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -29,6 +29,7 @@
         {{ render_nav_item("main.fields", "Fields", _use_li=True) }}
         {{ render_nav_item("main.crop", "Crop", _use_li=True) }}
         {{ render_nav_item("main.fertilizer", "Fertilizer", _use_li=True) }}
+        {{ render_nav_item("main.lists", "Lists", _use_li=True) }}
       {% endif %}
     </ul>
     <ul class="navbar-nav ms-auto">
