--- a/app/templates/lists.html
+++ b/app/templates/lists.html
@@ -2,54 +2,24 @@
 {% from "utils.html" import render_field %}
 
 {% block app_content %}
-  <div class="container-fluid">
-    <form action="" method="post">
+  <div class="container-fluid d-print-none">
+    <form action="" method="post" id="list-form">
       {{ render_field(form.csrf_token) }}
       <div class="row">
         <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-12">{{ render_field(form.list_type) }}</div>
-        <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-12">{{ render_field(form.item_type) }}</div>
+        {# <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-12">{{ render_field(form.item_type) }}</div> #}
         <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 col-sm-12">{{ render_field(form.year) }}</div>
       </div>
 
       <div class="row">
         <div class="col-xxl-3 col-md-4 col-sm-12">
-          <div class="row">
-            {{ render_field(form.fields) }}
-            <div class="col">
-              <button class="btn btn-sm btn-primary"
-                      type="button"
-                      onclick="selectAll(document.querySelector('#fields'))">All</button>
-              <button class="btn btn-sm btn-primary"
-                      type="button"
-                      onclick="deselectAll(document.querySelector('#fields'))">None</button>
-            </div>
-          </div>
+          <div class="row">{{ render_field(form.fields) }}</div>
         </div>
         <div class="col-xxl-3 col-md-4 col-sm-12">
-          <div class="row">
-            {{ render_field(form.crops) }}
-            <div class="col">
-              <button class="btn btn-sm btn-primary"
-                      type="button"
-                      onclick="selectAll(document.querySelector('#crops'))">All</button>
-              <button class="btn btn-sm btn-primary"
-                      type="button"
-                      onclick="deselectAll(document.querySelector('#crops'))">None</button>
-            </div>
-          </div>
+          <div class="row">{{ render_field(form.crops) }}</div>
         </div>
         <div class="col-xxl-3 col-md-4 col-sm-12">
-          <div class="row">
-            {{ render_field(form.fertilizers) }}
-            <div class="col">
-              <button class="btn btn-sm btn-primary"
-                      type="button"
-                      onclick="selectAll(document.querySelector('#fertilizers'))">All</button>
-              <button class="btn btn-sm btn-primary"
-                      type="button"
-                      onclick="deselectAll(document.querySelector('#fertilizers'))">None</button>
-            </div>
-          </div>
+          <div class="row">{{ render_field(form.fertilizers) }}</div>
         </div>
       </div>
 
@@ -92,30 +62,8 @@
           {% endfor %}
         </tbody>
       </table>
-
     </div>
   {% endif %}
 
-  <script>
-  function selectAll(selectField){
-    for (let option of selectField.options) {
-      option.setAttribute('selected', "")
-    }
-  }
-
-  function deselectAll(selectField){
-    for (let option of selectField.options) {
-      option.removeAttribute('selected')
-    }
-  }
-
-  const selectFields = document.querySelectorAll("form select[multiple]")
-  for (let select of selectFields) {
-    for (let option of select.options)
-    option.addEventListener("click", (e) => {
-      e.preventDefault();
-      e.currentTarget.toggleAttribute("selected")
-    })
-  }
-  </script>
+  <script src="{{url_for('static', filename='multiselect-dropdown/multiselect-dropdown.js')}}"></script>
 {% endblock app_content %}
