--- a/app/templates/utils.html
+++ b/app/templates/utils.html
@@ -161,13 +161,15 @@
   button_map={},
   button_style='',
   button_size='',
-  form_group_classes='') %}
+  form_group_classes='',
+  attributes={}) %}
 
   {# this is a workaround hack for the more straightforward-code of just passing required=required parameter. older versions of wtforms do not have
 the necessary fix for required=False attributes, but will also not set the required flag in the first place. we skirt the issue using the code below #}
   {% if field.flags.required and not required in kwargs %}
     {% set kwargs = dict(required=True, **kwargs) %}
   {% endif %}
+  {% do kwargs.update(attributes) %}
 
   {% set form_group_classes = form_group_classes or config.BOOTSTRAP_FORM_GROUP_CLASSES %}
 
